--- a/pom.xml
+++ b/pom.xml
@@ -1,36 +1,42 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>B03_Design_Pattern</groupId>
-  <artifactId>B03_Design_Pattern</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>B03_Design_Pattern Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    
-    <!-- https://mvnrepository.com/artifact/org.odftoolkit/odftoolkit -->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>B03_Design_Pattern</groupId>
+	<artifactId>B03_Design_Pattern</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>B03_Design_Pattern Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
 		<dependency>
-		    <groupId>org.odftoolkit</groupId>
-		    <artifactId>odftoolkit</artifactId>
-		    <version>0.9.0</version>
-		    <type>pom</type>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.odftoolkit/odftoolkit -->
+		<dependency>
+			<groupId>org.odftoolkit</groupId>
+			<artifactId>odftoolkit</artifactId>
+			<version>0.9.0</version>
+			<type>pom</type>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.odftoolkit/simple-odf -->
 		<dependency>
-		    <groupId>org.odftoolkit</groupId>
-		    <artifactId>simple-odf</artifactId>
-		    <version>0.9.0</version>
+			<groupId>org.odftoolkit</groupId>
+			<artifactId>simple-odf</artifactId>
+			<version>0.9.0</version>
 		</dependency>
 
-  </dependencies>
-  <build>
-    <finalName>B03_Design_Pattern</finalName>
-  </build>
+	</dependencies>
+	<build>
+		<finalName>B03_Design_Pattern</finalName>
+	</build>
 </project>
