add test log4j2

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.23.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.23.1</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.odftoolkit/odftoolkit -->
 		<dependency>
 			<groupId>org.odftoolkit</groupId>
