--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=debug,ConsoleAppender,file, file2
+log4j.rootLogger=debug, ConsoleAppender, file, file2
 
 log4j.appender.ConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.ConsoleAppender.layout=org.apache.log4j.PatternLayout
@@ -8,7 +8,7 @@ log4j.appender.ConsoleAppender.encoding=UTF-8
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=[B03Test][%d{yyyy/MM/dd HH:mm:ss}][%p][%t][%L][%C - %M] %m%n
-log4j.appender.file.File=/B03Test/log/daily/b03.log
+log4j.appender.file.File=/B03Test/log4j/daily/b03.log
 log4j.appender.file.encoding=UTF-8
 
 
@@ -17,5 +17,5 @@ log4j.appender.file2.MaxFileSize=1MB
 log4j.appender.file2.MaxBackupIndex=2
 log4j.appender.file2.layout=org.apache.log4j.PatternLayout
 log4j.appender.file2.layout.ConversionPattern=[B03Test][%d{yyyy/MM/dd HH:mm:ss}][%p][%t][%L][%C - %M] %m%n
-log4j.appender.file2.File=/B03Test/log/b03.log
+log4j.appender.file2.File=/B03Test/log4j/b03.log
 log4j.appender.file2.encoding=UTF-8
